--- a/pages/home.html
+++ b/pages/home.html
@@ -15,27 +15,32 @@
     <!-- Navbar -->
     <nav>
         <a href="./home.html" id="logo">
-            <span class="vokemons">Vokemons</span>
+            <span class="vokemons">Vokémon</span>
         </a>
         <button id="hamburgerBtn">&#9776;</button>
         <div class="navbarBtn">
-            <a href="./home.html" id="home">Home</a>
-            <a href="./news.html">News</a>
-            <a href="./pokemon.html">Pokemon</a>
-            <a href="./tournament.html">Tournament</a>
+            <a href="./home.html" id="homePage">Home</a>
+            <a href="./news.html" id="newsPage">News</a>
+            <a href="./pokemon.html" id="pokemonPage">Pokémon</a>
+            <a href="./tournament.html" id="tournamentPage">Tournament</a>
+            <a href="./register.html" id="registerPage">Register</a>
         </div>
-        <div class="profile">
-            <img src="../assets/home/profile.png" alt="">
-        </div>
+        <a href="./register.html" id="ProfileBox">
+            <div class="profile">
+                <img src="../assets/home/profile.png" alt="">
+            </div>
+        </a>
     </nav>
 
     <!-- home - slogan -->
     <div class="home-slogan">
         <img src="../assets/home/HomeSloganImage.png" alt="">
         <div class="slogan-detail">
-            <h1>Join the Game and<br>Register for Free</h1>
-            <p>Grab your ticket to many pokemons that you<br>can get in every place</p>
-            <button class="btnRegister">Register Now</button>
+            <h1>Explore the<br>VokémonS Universe</h1>
+            <p>Embark on an Epic Journey, Unlock Limitless<br>Adventures!</p>
+            <a href="./register.html">
+                <button class="btnRegister">Register Now</button>
+            </a>
         </div>
     </div>
 
@@ -50,7 +55,7 @@
                 <div class="newsDesc">
                     <h1>Detective Pikachu Returns<br>Event </h1>
                     <p>Pikachu wearing a detective hat will be <br>
-                        appearing in Pokémon GO for a limited time!<br>
+                        appearing in VokémonS GO for a limited time!<br>
                         Celebrate the release of Detective Pikachu <br>
                         Returns on Nintendo Switch by...
                     </p>
@@ -65,11 +70,11 @@
                     <img src="../assets/news/news2.png" alt="#"> 
                 </div>
                 <div class="newsDesc">
-                    <h1>Detective Pikachu Returns<br>Event </h1>
-                    <p>Pikachu wearing a detective hat will be <br>
-                        appearing in Pokémon GO for a limited time!<br>
-                        Celebrate the release of Detective Pikachu <br>
-                        Returns on Nintendo Switch by...
+                    <h1>VokémonS GO Collaborates <br>With Lunchables</h1>
+                    <p>Get ready for a flavorful adventure in <br>
+                        VokémonS GO as it announces an exciting <br>
+                        collaboration with Lunchables! Trainers can <br>
+                        look forward to special ...
                     </p>
                 </div>
                 <div class="newsBtn">
@@ -82,11 +87,11 @@
                     <img src="../assets/news/news3.png" alt="#"> 
                 </div>
                 <div class="newsDesc">
-                    <h1>Detective Pikachu Returns<br>Event </h1>
-                    <p>Pikachu wearing a detective hat will be <br>
-                        appearing in Pokémon GO for a limited time!<br>
-                        Celebrate the release of Detective Pikachu <br>
-                        Returns on Nintendo Switch by...
+                    <h1>Shadow Zapdos <br>Compensation Announced</h1>
+                    <p>Attention, Trainers! Following the recent <br>
+                        challenges with Shadow Zapdos encounters <br>
+                        in VokémonS GO, Niantic has announced a <br>
+                        special compensation plan ...
                     </p>
                 </div>
                 <div class="newsBtn">
@@ -99,23 +104,23 @@
 
     <!-- Home - Ciruit -->
     <div class="home-circuit">
-        <h1 id="circuit-news">Upcoming Vokemons Pro Circuit</h1>
+        <h1 id="circuit-news">Upcoming VokemonS Pro Circuit</h1>
         <div class="videoCircuit">
-            <img src="../assets/home/video-container.png" alt="">
+            <a href="./tournament.html"><img src="../assets/home/video-container.png" alt=""></a>
         </div>
         <div class="circuitInformation">
             <div class="detail">
-                <h1 id="circuit-title">Vokemon Pro Circuit 2023</h1>
+                <h1 id="circuit-title">VokemonS Pro Circuit 2023</h1>
                 <p id="circuit-description">
-                    The Pokémon Pro Circuit is a competitive gaming circuit that focuses on organized Pokémon video game <br>
-                    and trading card game (TCG) tournaments. It provides a platform for Pokémon enthusiasts to compete at <br>
+                    The VokémonS Pro Circuit is a competitive gaming circuit that focuses on organized VokémonS video game <br>
+                    and trading card game (TCG) tournaments. It provides a platform for VokémonS enthusiasts to compete at <br>
                     a high level and showcase their skills in both video game battles and TCG matches. The circuit features <br>
                     various events and tournaments throughout the year, allowing players to earn points and qualify for <br>
                     prestigious championships. 
                 </p>
                 <div class="locdate-info">
                     <img src="../assets/home/calender.svg" alt="">
-                    <p>22 December 2023</p>
+                    <p>20 December 2023</p>
                 </div>
                 <div class="locdate-info">
                     <img src="../assets/home/location.svg" alt="">
@@ -147,5 +152,6 @@
             <p>Copyright @2023; Designed by Joshua Prathama Raga Lawa</p>
         </div>
     </footer>
+    <script src="path/to/formValidation.js"></script>
 </body>
 </html>
