--- a/pages/news.html
+++ b/pages/news.html
@@ -15,18 +15,21 @@
     <!-- Navbar -->
     <nav>
         <a href="./home.html" id="logo">
-            <span class="vokemons">Vokemons</span>
+            <span class="vokemons">Vokémon</span>
         </a>
         <button id="hamburgerBtn">&#9776;</button>
         <div class="navbarBtn">
-            <a href="./home.html" id="home">Home</a>
-            <a href="./news.html">News</a>
-            <a href="./pokemon.html">Pokemon</a>
-            <a href="./tournament.html">Tournament</a>
+            <a href="./home.html" id="homePage">Home</a>
+            <a href="./news.html" id="newsPage">News</a>
+            <a href="./pokemon.html" id="pokemonPage">Pokémon</a>
+            <a href="./tournament.html" id="tournamentPage">Tournament</a>
+            <a href="./register.html" id="registerPage">Register</a>
         </div>
-        <div class="profile">
-            <img src="../assets/home/profile.png" alt="">
-        </div>
+        <a href="./register.html" id="ProfileBox">
+            <div class="profile">
+                <img src="../assets/home/profile.png" alt="">
+            </div>
+        </a>
     </nav>
 
     <!-- Popular News -->
@@ -39,7 +42,7 @@
             <h1>
                 Niantic testing shorter Raid <br>
                 Lobby Timers for Tier 1 & 3 Raids <br>
-                in Pokémon GO
+                in VokémonS GO
             </h1>
             <p>
                 Niantic's official support account on <br>
@@ -58,7 +61,7 @@
             <h1>
                 Niantic testing shorter Raid <br>
                 Lobby Timers for Tier 1 & 3 Raids <br>
-                in Pokémon GO
+                in VokémonS GO
             </h1>
             <p>
                 Niantic's official support account on <br>
@@ -82,7 +85,7 @@
                 <div class="newsDesc">
                     <h1>Detective Pikachu Returns<br>Event </h1>
                     <p>Pikachu wearing a detective hat will be <br>
-                        appearing in Pokémon GO for a limited time!<br>
+                        appearing in VokémonS GO for a limited time!<br>
                         Celebrate the release of Detective Pikachu <br>
                         Returns on Nintendo Switch by...
                     </p>
@@ -92,16 +95,16 @@
                     <button>Detail</button>
                 </div>
             </div>
-            <div id="midNews" class="news">
+            <div id="midNews"  class="news">
                 <div class="news-photo" >
                     <img src="../assets/news/news2.png" alt="#"> 
                 </div>
                 <div class="newsDesc">
-                    <h1>Detective Pikachu Returns<br>Event </h1>
-                    <p>Pikachu wearing a detective hat will be <br>
-                        appearing in Pokémon GO for a limited time!<br>
-                        Celebrate the release of Detective Pikachu <br>
-                        Returns on Nintendo Switch by...
+                    <h1>VokémonS GO Collaborates <br>With Lunchables</h1>
+                    <p>Get ready for a flavorful adventure in <br>
+                        VokémonS GO as it announces an exciting <br>
+                        collaboration with Lunchables! Trainers can <br>
+                        look forward to special ...
                     </p>
                 </div>
                 <div class="newsBtn">
@@ -109,16 +112,16 @@
                     <button>Detail</button>
                 </div>
             </div>
-            <div id="lastNews" class="news">
+            <div id="lastNews"  class="news">
                 <div class="news-photo" >
                     <img src="../assets/news/news3.png" alt="#"> 
                 </div>
                 <div class="newsDesc">
-                    <h1>Detective Pikachu Returns<br>Event </h1>
-                    <p>Pikachu wearing a detective hat will be <br>
-                        appearing in Pokémon GO for a limited time!<br>
-                        Celebrate the release of Detective Pikachu <br>
-                        Returns on Nintendo Switch by...
+                    <h1>Shadow Zapdos <br>Compensation Announced</h1>
+                    <p>Attention, Trainers! Following the recent <br>
+                        challenges with Shadow Zapdos encounters <br>
+                        in VokémonS GO, Niantic has announced a <br>
+                        special compensation plan ...
                     </p>
                 </div>
                 <div class="newsBtn">
@@ -128,17 +131,18 @@
             </div>
         </div>
 
+        <!-- list news 2 -->
         <div class="newsContainer">
             <div id="firstNews" class="news">
                 <div class="news-photo" >
-                    <img src="../assets/news/news1.png" alt="#"> 
+                    <img src="../assets/news/news4.png" alt="#"> 
                 </div>
                 <div class="newsDesc">
-                    <h1>Detective Pikachu Returns<br>Event </h1>
-                    <p>Pikachu wearing a detective hat will be <br>
-                        appearing in Pokémon GO for a limited time!<br>
-                        Celebrate the release of Detective Pikachu <br>
-                        Returns on Nintendo Switch by...
+                    <h1>VokémonS Horizons: The <br>Series Will Debut on Netflix</h1>
+                    <p>Get ready to embark on an epic journey <br>
+                        beyond the games as VokémonS Horizons: The<br>
+                        Series makes its debut on Netflix in February<br>
+                        2023! This animated...
                     </p>
                 </div>
                 <div class="newsBtn">
@@ -148,14 +152,14 @@
             </div>
             <div id="midNews" class="news">
                 <div class="news-photo" >
-                    <img src="../assets/news/news2.png" alt="#"> 
+                    <img src="../assets/news/news5.png" alt="#"> 
                 </div>
                 <div class="newsDesc">
-                    <h1>Detective Pikachu Returns<br>Event </h1>
-                    <p>Pikachu wearing a detective hat will be <br>
-                        appearing in Pokémon GO for a limited time!<br>
-                        Celebrate the release of Detective Pikachu <br>
-                        Returns on Nintendo Switch by...
+                    <h1>Pikachu & Eevee Soar <br>Above the Streets of NYC</h1>
+                    <p>Brace yourselves, Trainers! Pikachu and <br>
+                        Eevee are taking their electrifying charm to<br>
+                        new heights as they soar above the streets <br>
+                        of New York City...
                     </p>
                 </div>
                 <div class="newsBtn">
@@ -165,14 +169,14 @@
             </div>
             <div id="lastNews" class="news">
                 <div class="news-photo" >
-                    <img src="../assets/news/news3.png" alt="#"> 
+                    <img src="../assets/news/news6.png" alt="#"> 
                 </div>
                 <div class="newsDesc">
                     <h1>Detective Pikachu Returns<br>Event </h1>
-                    <p>Pikachu wearing a detective hat will be <br>
-                        appearing in Pokémon GO for a limited time!<br>
-                        Celebrate the release of Detective Pikachu <br>
-                        Returns on Nintendo Switch by...
+                    <p>Prepare for a restful adventure, Trainers! <br>
+                        Vokémon Sleep invites you to embrace <br>
+                        tranquility during the November 2023 Good<br>
+                        Sleep Day Event. Unwind with special ...
                     </p>
                 </div>
                 <div class="newsBtn">
@@ -191,7 +195,7 @@
 
     <!-- footer -->
     <footer>
-        <span class="vokemons">Vokemons</span>
+        <span class="vokemons">Vokemon</span>
         <p>Follow Us</p>
         <div class="social-media">
             <div class="circle">
